force-app/hfs-backend/main/default/objects/hfs_Alert__c/hfs_Alert__c.object-meta.xml
<CustomObject>
    <description>Announcement / notification store backing the highlighted banner on the Home dashboard (HFS-32). One active, highlighted alert renders as the banner with a call-to-action link.</description>
    <label>Alert</label>
    <nameField>
        <label>Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>