force-app/hfs-backend/main/default/objects/hfs_Alert__c/fields/hfs_Audience__c.field-meta.xml
<CustomField>
    <fullName>hfs_Audience__c</fullName>
    <description>Target audience for record-level targeting of the announcement to a partner segment.</description>
    <label>Audience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Unbranded Dealer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>