force-app/hfs-backend/main/default/objects/hfs_Alert__c/fields/hfs_CTA_Label__c.field-meta.xml
<CustomField>
    <fullName>hfs_CTA_Label__c</fullName>
    <label>CTA Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>