force-app/hfs-backend/main/default/objects/hfs_Alert__c/fields/hfs_CTA_URL__c.field-meta.xml
<CustomField>
    <fullName>hfs_CTA_URL__c</fullName>
    <description>Call-to-action target. Validated as site-relative / allow-listed before render.</description>
    <label>CTA URL</label>
    <type>Url</type>
</CustomField>