force-app/hfs-backend/main/default/objects/hfs_Alert__c/fields/hfs_End_Date__c.field-meta.xml
<CustomField>
    <fullName>hfs_End_Date__c</fullName>
    <description>Optional activation window end.</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>