force-app/hfs-backend/main/default/objects/hfs_Alert__c/fields/hfs_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>hfs_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the alert is currently active. Banner shows only when true.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>