force-app/hfs-backend/main/default/objects/hfs_Alert__c/fields/hfs_Is_Highlighted__c.field-meta.xml
<CustomField>
    <fullName>hfs_Is_Highlighted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks the single highlighted banner alert.</description>
    <label>Is Highlighted</label>
    <type>Checkbox</type>
</CustomField>