force-app/hfs-backend/main/default/objects/hfs_Alert__c/fields/hfs_Message__c.field-meta.xml
<CustomField>
    <fullName>hfs_Message__c</fullName>
    <label>Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>