force-app/hfs-backend/main/default/objects/hfs_Alert__c/fields/hfs_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>hfs_Start_Date__c</fullName>
    <description>Optional activation window start.</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>