force-app/hfs-backend/main/default/objects/hfs_Alert__c/fields/hfs_Title__c.field-meta.xml
<CustomField>
    <fullName>hfs_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>